--- a/Auerfarm_Application/Admin/Anders/map-objects.html
+++ b/Auerfarm_Application/Admin/Anders/map-objects.html
@@ -4,7 +4,18 @@
 	<meta charset="utf-8">
 	<link href="/Content/bootstrap.min.css" rel="stylesheet">
 	<link href="/Content/style.css" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1.0">
+    <style>
+          /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+          #map {
+              height: 400px;
+              width: 60%;
+              align-content: center;
+              margin-left: auto;
+              margin-right: auto;
+          }
+    </style>
 </head>
 
 <body>
@@ -32,7 +43,37 @@
 			</div>
 			<div class="col-md-2"></div>
 		</div>
-		<hr />
+
+        <div id="map"></div>
+        <script>
+      var map;
+      function initMap() {
+          var auerfarm = {lat: 41.811224, lng: -72.774158};
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: auerfarm,
+          zoom: 18,
+          mapTypeId: 'satellite'
+        });
+
+        var drawingManager = new google.maps.drawing.DrawingManager({
+            drawingMode: google.maps.drawing.OverlayType.MARKER,
+            drawingControl: true,
+            drawingControlOptions: {
+                position: google.maps.ControlPosition.BOTTOM_CENTER,
+                drawingModes: ['marker']
+            },
+            markerOptions:
+            {
+                draggable: true,
+            },
+
+        });
+        drawingManager.setMap(map);
+      }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEIKQKPXffQ-lVn4p5FjI9sBjsb4GAGWQ&libraries=drawing&callback=initMap"
+                async defer></script>
+        <br /><br />
 		<div class="row nav-button-row">
 			<div class="col-md-2"></div>
 			<div class="col-md-8">
