--- a/Auerfarm_Application/Admin/Anders/view-announcements.html
+++ b/Auerfarm_Application/Admin/Anders/view-announcements.html
@@ -15,7 +15,7 @@
    			<div class="nav-options navbar-left">
    			 	<ul class="nav navbar-nav">
  	     			<li><a class="hyper-nav" href="announcements.html">Announcements & News</a></li>
- 	     			<li><a  class="hyper-nav" href="map-objects.html">Interactive Map</a></li>
+ 	     			<li><a  class="hyper-nav" href="map-objects.aspx">Interactive Map</a></li>
     			</ul>
     		</div>
     		<div class="nav-welcome navbar-right">
