--- a/Mobile Cordova/www/index.html
+++ b/Mobile Cordova/www/index.html
@@ -8,17 +8,96 @@
 
     <link href="css/map.css" rel="stylesheet" />
     <script type="text/javascript" src="cordova.js"></script>
-    <script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyBEIKQKPXffQ-lVn4p5FjI9sBjsb4GAGWQ" type="text/javascript"></script>
     <script type="text/javascript">
 
 
         function onSuccess() {
+            var map;
+            var infowindow;
+            var messagewindow;
+            currentMarker = null;// = null;
+            allMarkers = [];
+
             var auerfarm = { lat: 41.811224, lng: -72.774158 };
-            var map = new google.maps.Map(document.getElementById('map'), {
+            var mapOptions = {
                 center: auerfarm,
                 zoom: 18,
                 mapTypeId: 'satellite'
+            };
+
+            map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+            //debugger;
+            var objects = [];
+
+            $.ajax({
+                type: "GET",
+                url: "http://localhost:50409/Api/Data",
+                data: { type: "Map" },
+                async: false,
+                success: function (response) {
+                    //debugger;
+                    objects = JSON.parse(response);
+                },
+                error: function (error) {
+                    debugger;
+                }
             });
+
+            var iconBase = "/Content/";
+            var icons = {
+                animal: {
+                    icon: iconBase + "type-animal.png"
+                },
+                building: {
+                    icon: iconBase + "type-building.png"
+                },
+                plant: {
+                    icon: iconBase + "type-plant.png"
+                },
+                landmark: {
+                    icon: iconBase + "type-landmark.png"
+                },
+                trail: {
+                    icon: iconBase + "type-trail.png"
+                },
+                other: {
+                    icon: iconBase + "type-other.png"
+                }
+            };
+
+            debugger;
+            for (var i in objects) {
+                var ob = objects[i];
+                //console.log(ob);
+                var long = parseFloat(ob.Long);
+                var lat = parseFloat(ob.Lat)
+                var pos = new google.maps.LatLng(lat, long);
+                var mark = new google.maps.Marker({
+                    position: pos,
+                    map: map,
+                    icon: "http://localhost:50409/Content/" + ob.Type + ".png",
+                    draggable: true,
+                    id: i,
+                    type: ob.Type,
+                });
+                //console.log(mark);
+                var infowindow;
+
+                mark.addListener('mouseover', function () {
+                    // console.log(mark);
+                    infowindow = InfoContent(objects[this.id]);
+                    infowindow.open(map, this);
+                });
+
+                mark.addListener('mouseout', function () {
+                    infowindow.close();
+                });
+
+                allMarkers.push(mark);
+            }
+
         }
 
         google.maps.event.addDomListener(window, 'load', onSuccess);
